# jupiter-rings-tomography

./: .gitignore  CMakeLists.txt  Makefile  getjuno.cpp  projection.py  stars.py  tau.py
calibration/: tau.py
projection/: getjuno.cpp  setup.ker
src/: calibration.cpp  planetarium.cpp  simulation.cpp
